--- a/ConfigClientService/src/main/resources/bootstrap.properties
+++ b/ConfigClientService/src/main/resources/bootstrap.properties
@@ -3,3 +3,6 @@ server.port=8090
 
 spring.cloud.config.uri=http://localhost:8888
 spring.profiles.active=development
+
+spring.security.user.name=user
+spring.security.user.password=password
