More code for naming server

--- a/ConfigClientService/src/main/resources/bootstrap.properties
+++ b/ConfigClientService/src/main/resources/bootstrap.properties
@@ -6,3 +6,5 @@ spring.profiles.active=development
 
 spring.security.user.name=user
 spring.security.user.password=password
+
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
