--- a/RibbonClientService/src/main/resources/application.properties
+++ b/RibbonClientService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=RibbonClientService
 server.port=9010
 
-
-ConfigClientService.ribbon.listOfServers=http://localhost:8090,http://localhost:8091
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+#ConfigClientService.ribbon.listOfServers=http://localhost:8090,http://localhost:8091
